# blog

./: .gitignore  .gitmodules  .python-version  404.html  Makefile  Readme.md  archives.html  environment.yml  index.html  index2.html  index3.html  index4.html  index5.html  index6.html  index7.html  pelicanconf.py  publishconf.py  pyproject.toml  remove-warning-slimit.sh  robots.txt  sitemap.xml  tasks.py
2021/: notebook-serie-evaluacion-perezosa-en-python.ipynb  notebook-serie-evaluacion-perezosa-en-python.sync.ipynb  notebook-serie-evaluacion-perezosa-en-python.sync.md
blog/feeds/: all.atom.xml  ciencia.atom.xml  coconut.atom.xml  matematicas.atom.xml  notas.atom.xml  python.atom.xml  scala.atom.xml  tecnicas.atom.xml
category/: index.html
category/ciencia/: index.html
category/coconut/: index.html
category/desarrollo/: index.html
category/matematicas/: index.html
category/notas/: index.html
category/pensamientos/: index.html  index2.html
category/python/: index.html  index2.html  index3.html  index4.html  index5.html
category/scala/: index.html
category/tecnicas/: index.html
code/2019Q2/: environment.yml
code/2021Q1/: potencias.py
code/prueba1/: fact.coco
content/: 2016-01-10 Renacimiento.md  2018-07-23 Reinicio 2018.md  2018-07-25-advertencias-markdown.md
content/2016/: 2016-01-18-manejo-de-iteradores.md
content/2018/: 2016-01-10 Renacimiento.md  2016-01-18-los-iteradores-parecen-listas-pero-no-lo-son.md  2018-07-23 Reinicio 2018.md  2018-07-25-factorial paralelo en scala.md
content/2019/: 2019-04-08-que-es-un-coconut.md  2019-04-16-instalando-coconut.md  2019-05-05-monadas-con-coco.md  2019-09-25-manejo-de-rutas-pathlib.md
content/2021/: 2021-02-01-reorientando-el-blog.md  2021-02-08-0-serie-evaluacion-perezosa-en-python.txt  2021-02-08-1-evaluacion-perezosa-en-python.md  2021-02-08-evaluacion-perezosa-en-python-parte-1.md  2021-02-08-serie-evaluacion-perezosa-en-python.ipynb  2021-02-08-serie-evaluacion-perezosa-en-python.txt  (+16 more)
drafts/: 2016-01-18-los-iteradores-parecen-listas-pero-no-lo-son.html  2018-07-24-prueba-de-advertencias.html  2019-04-16-instalando-coconut.html  2019-05-04-guion.html  2019-05-13-enumerables.html  2021-01-10-colecciones-en-python.html  2021-01-10-tipos-algebraicos.html  2021-01-16-programar-para-concurrencia.html  2021-02-01-introduccion-a-la-metaprogramacion-con-python.html  2021-02-01-reorientando-el-blog.html  2021-02-15-evaluacion-perezosa-en-python-parte-4.html  2021-02-15-evaluacion-perezosa-en-python-parte-5.html  2021-03-07-evaluacion-perezosa-en-python-parte-6.html  2021-09-25-sobre-el-tooling-para-scala.html  2021-10-24-tasty.html  2021-10-24-tooling-para-scala.html  2021-12-09-nueva-sintaxis-en-scala3-pero-opcional.html  2022-09-11-mantenimiento-obsolescencia-y-reproducibilidad.html  2022-09-16-algoritmos-y-lenguaje.html  los-iteradores-parecen-listas-pero-no-lo-son.html  prueba-de-advertencias.html
feeds/: all.atom.xml  ciencia.atom.xml  coconut.atom.xml  desarrollo.atom.xml  matematicas.atom.xml  notas.atom.xml  pensamientos.atom.xml  python.atom.xml  scala.atom.xml  tecnicas.atom.xml
scripts/: new_article.py
tag/: index.html
(+232 files in other folders)
